--- a/front/public/css/index.css
+++ b/front/public/css/index.css
@@ -275,7 +275,7 @@ padding: 10px;
 
 .liked_box > i {
     width: 2rem;
-    color: #fc0a0a;
+    color: #ff0000;
 }
 
 .hit_box {
@@ -345,16 +345,16 @@ padding: 10px;
 
 #chatSpace {
     position: fixed;
+    z-index: 5;
     top: 45rem;
     /* right: 5rem; */
     right: -55rem;
     width: 50rem;
-    height: 70rem;
-    max-height: 70rem;
+    /* height: 70rem; */
+    min-height: 70rem;
     background-color: #ececec;
     box-shadow: 1rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
     transition: all 1s;
-    overflow: auto;
 }
 
 #chatHeader {
@@ -383,10 +383,13 @@ padding: 10px;
     width: 100%;
     margin: 1rem 0;
     display: flex;
+    flex-direction: column;
     justify-content: left;
+    align-items: flex-start;
 }
 
 .chatContentsLeft > li {
+    margin: 0.5rem;
     font-size: 2rem;
     line-height: 3rem;
 }
@@ -395,10 +398,14 @@ padding: 10px;
     width: 100%;
     margin: 1rem 0;
     display: flex;
+    flex-direction: column;
     justify-content: right;
+    align-items: flex-end;
 }
 
 .chatContentsRight > li {
+    display: block;
+    margin: 0.5rem;
     font-size: 2rem;
     line-height: 3rem;
 }
@@ -436,7 +443,7 @@ padding: 10px;
     box-sizing: border-box;
 }
 
-#chatBox > div {
+#chatBox > button {
     width: 15%;
     height: 100%;
     font-size: 2rem;
@@ -448,6 +455,6 @@ padding: 10px;
     color: var(--main);
 }
 
-#chatBox > div:hover {
+#chatBox > button:hover {
     background-color: var(--footer);
 }
