fix: board view comment count 뜨도록 수정

--- a/front/views/board/category/boardView.html
+++ b/front/views/board/category/boardView.html
@@ -72,7 +72,7 @@
 
                         <!-- 전체 댓글창 -->
                         <div class="viewComment">
-                            <div class="commentCount">댓글({{comment.length}})</div>
+                            <div class="commentCount">댓글({{commentCount}})</div>
 
                             <!-- 원댓 -->
                             {% for reply in commentResult %}
