--- a/front/views/board/qna/qnaView.html
+++ b/front/views/board/qna/qnaView.html
@@ -18,11 +18,7 @@
                 <div id="viewForm">
                     <!-- 상단 고정 부분 -->
                     <div class="top">
-                        {% if content.mainName %}
-                        <h1>{{content.mainName}} - {{content.subName}}</h1>
-                        {% else %}
-                        <h1>공지사항</h1>
-                        {% endif %}
+                        <h1>QnA</h1>
                         <span></span>
                     </div>
 
@@ -56,22 +52,9 @@
                                         {%endfor%}
                                     </div>
                                 </div>
-                                <div class="hashtagData">
-                                    <ul>
-                                        {%for item in hashtag%}
-                                        <li><a href="#"># {{item.tagName}}　</a></li>
-                                        {%endfor%}
-                                    </ul>
-                                </div>
                             </div>
 
                             <!-- 좋아요 -->
-                            <div class="contentBottom">
-                                <div class="changeIMG">
-                                    <img src="/img/thumsup.png" />
-                                </div>
-                                <div class="thumsupCount">{{contentResult.liked}}</div>
-                            </div>
                         </div>
 
                         <!-- 전체 댓글창 -->
@@ -165,17 +148,12 @@
                         </div>
 
                         <!-- 이전글 혹은 다음글 -->
-                        <div class="viewBottom">
-                            <a href="/board/view?idx=" class="viewPrev">◀ 이전글</a>
-                            <a href="/board/view?idx=" class="viewNext">다음글 ▶</a>
-                        </div>
                     </div>
                 </div>
             </div>
         </article>
         <script src="/js/board/view.js" type="text/javascript"></script>
         <!-- 좋아요 기능 들어있음 -->
-        <script src="/js/board/category/boardList.js" type="text/javascript"></script>
 
         {% include 'layout/footer.html' %}
     </body>
