--- a/front/views/board/category/boardWrite.html
+++ b/front/views/board/category/boardWrite.html
@@ -22,6 +22,7 @@
 
                 <div class="write">
                     <form method="post" action="/board/write" enctype="multipart/form-data">
+                        <input type="hidden" value="write" />
                         <ul>
                             <li class="subject">
                                 <select class="mainCategorySelect" name="mainName">
