--- a/front/views/board/category/boardView.html
+++ b/front/views/board/category/boardView.html
@@ -39,7 +39,7 @@
 
                                     {%if content.cookies == content.user_userid %}
                                     <li class="contentModify"><a href="/board/modify?id={{content.id}}">수정</a></li>
-                                    <li class="contentDelete"><a href="/board/delete">삭제</a></li>
+                                    <li class="contentDelete"><a href="/board/delete?id={{content.id}}">삭제</a></li>
                                     {%endif%}
                                 </ul>
                             </div>
@@ -116,21 +116,10 @@
                                         <!-- <span>내닉네임</span><br /> -->
                                         <div>
                                             <input type="hidden" name="userid" value="mood" />
-                                            <input
-                                                type="hidden"
-                                                name="boardId"
-                                                value="{{content.id}}"
-                                            />
+                                            <input type="hidden" name="boardId" value="{{content.id}}" />
                                             <input type="hidden" name="classNum" value="1" />
-                                            <input
-                                                type="hidden"
-                                                name="groupNum"
-                                                value="{{reply.id}}"
-                                            />
-                                            <textarea
-                                                name="content"
-                                                placeholder="댓글을 입력하세요"
-                                            ></textarea>
+                                            <input type="hidden" name="groupNum" value="{{reply.id}}" />
+                                            <textarea name="content" placeholder="댓글을 입력하세요"></textarea>
                                             <button type="submit">등록</button>
                                         </div>
                                     </form>
@@ -148,16 +137,9 @@
                                 <form method="post" action="/board/view/comment">
                                     <!-- <span>내닉네임</span><br /> -->
                                     <div>
-                                        <input
-                                            type="hidden"
-                                            name="boardId"
-                                            value="{{content.id}}"
-                                        />
+                                        <input type="hidden" name="boardId" value="{{content.id}}" />
                                         <input type="hidden" name="classNum" value="0" />
-                                        <textarea
-                                            name="content"
-                                            placeholder="댓글을 입력하세요"
-                                        ></textarea>
+                                        <textarea name="content" placeholder="댓글을 입력하세요"></textarea>
                                         <button type="submit">등록</button>
                                     </div>
                                 </form>
