--- a/front/views/index.html
+++ b/front/views/index.html
@@ -107,8 +107,8 @@
                 <div id="chatHeader">
                     <div id="cancelBtn"></div>
                 </div>
-                <ul class="chatContentsLeft"></ul>
-                <ul class="chatContentsRight"></ul>
+                <!-- <ul class="chatContentsLeft"></ul>
+                <ul class="chatContentsRight"></ul> -->
                 <!-- <template id="chatLeft">
                     <ul class="chatContentsLeft">
                         <li class="chatUserName">char1ey</li>
