feat: logout 기능 구현

--- a/front/views/layout/header.html
+++ b/front/views/layout/header.html
@@ -24,6 +24,7 @@
         <li class="header_function join_box"><a href="/user/join">Sign up</a></li>
         {% endif %}
     </ul>
+    <script src="/js/layout/header.js" defer></script>
 </div>
 <!-- <div class="wrap">
     <aside id="sidebarWrap">
