--- a/front/views/admin/adminUser.html
+++ b/front/views/admin/adminUser.html
@@ -63,7 +63,7 @@
                         {% endfor %}
                     </table>
                 <div class="adminPreNext">
-                    <a id="prev"></a>
+                    <a id="prev"><</a>
                     {% for number in btnNumber %}
                     <span class="pageNumber">{{number}}</span>
                     {% endfor %}
