--- a/front/public/css/admin/adminBoard.css
+++ b/front/public/css/admin/adminBoard.css
@@ -43,9 +43,18 @@
     width: 100%;
 }
 
-.adminBoardSearch > form {
-    width: 70rem;
+.adminBoardSearch > select {
+    width: 15rem;
+    height: 4.5rem;
     display: flex;
+}
+
+.adminBoardSearch > select > option {
+    width: 15rem;
+    height: 4.5rem;
+    font-size: 2rem;
+    font-weight: 700;
+    text-align: center;
 }
 
 /* .adminBoardSearch > form > span {
@@ -66,7 +75,7 @@
     box-shadow: 1rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
 }
 
-.adminBoardSearch > form > button {
+.adminBoardSearch > button {
     text-align: center;
     line-height: 3rem;
     width: 10rem;
@@ -84,7 +93,7 @@
     box-shadow: 1rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
 }
 
-.adminBoardSearch > form > button:hover {
+.adminBoardSearch > button:hover {
     background-color: var(--footer);
 }
 
@@ -159,6 +168,22 @@ table {
     height: 5rem;
 }
 
+.boardSubject:hover {
+    background-color: var(--header);
+    color: var(--main);
+}
+
+.access {
+    cursor: pointer;
+    background-color: var(--header);
+    color: var(--main);
+}
+
+.access:hover {
+    background-color: var(--footer);
+    color: var(--main);
+}
+
 .adminPreNext{
     display: flex;
     justify-content: center;
@@ -184,4 +209,54 @@ table {
 
 .adminPreNext > a:hover {
     background-color: var(--footer);
+}
+
+.adminPreNext{
+    display: flex;
+    justify-content: center;
+}
+
+.adminPreNext > a {
+    cursor: pointer;
+    text-align: center;
+    line-height: 3rem;
+    width: 15rem;
+    height: 4.5rem;
+    margin: 1rem auto;
+    border: none;
+    border-radius: 0.5rem;
+    box-sizing: border-box;
+    font-size: 2rem;
+    font-weight: 700;
+    padding: 1rem;
+    color: var(--main);
+    background-color: var(--header);
+    transition: all 0.2s;
+    box-shadow: 1rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
+}
+
+.adminPreNext > a:hover {
+    background-color: var(--footer);
+}
+
+.pageNumber {
+    cursor: pointer;
+    text-align: center;
+    line-height: 3rem;
+    width: 4rem;
+    height: 4.5rem;
+    margin: 1rem 2.5rem;
+    box-sizing: border-box;
+    border-radius: 0.5rem;
+    font-size: 2rem;
+    font-weight: 700;
+    padding: 1rem;
+    color: var(--main);
+    background-color: var(--footer);
+    box-shadow: 0.75rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
+}
+
+.pageNumber:hover {
+    background-color: var(--main);
+    color: var(--footer);
 }
