--- a/front/views/admin/admin.html
+++ b/front/views/admin/admin.html
@@ -21,7 +21,7 @@
                 <div class="content left">
                     <a href="/admin/user?page=1">회원 관리</a>
                     <a href="/admin/category">카테고리 관리</a>
-                    <a href="/admin/board">게시판 관리</a>
+                    <a href="/admin/board?page=1&order=">게시판 관리</a>
                 </div>
                 <div class="content right">
                     <a href="/admin/stats">커뮤니티 통계</a>
